fixed dashboards tab showing up too close to the tab buttons

--- a/fluxtream-web/src/main/webapp/less/flx.less
+++ b/fluxtream-web/src/main/webapp/less/flx.less
@@ -876,7 +876,8 @@ table .remove { text-align:center;
  }
 
 #filterPlaceHolderElement, #filtersContainer {
-    margin-top: -17px;
+  min-height: 18px;
+  margin-top: -17px;
 }
 
 #filtersContainer.floating{
